--- a/index.html
+++ b/index.html
@@ -9,24 +9,24 @@
   </head>
 
   <body>
-    <header>
-      <nav class="navbar">
-        <ul class="menu">
-          <li><a href="index.html">Front page</a></li>
-          <li><a href="about_us.html">About us</a></li>
-          <li><a href="events.html">Events</a></li>
-          <li><a href="merge.html">Merch</a></li>
-          <li><a href="press.html">Press</a></li>
-          <li><a href="giftcard.html">Giftcard</a></li>
-        </ul>
-      </nav>
-    </header>
+    <div class="screen">
+      <header>
+        <nav class="navbar">
+          <ul class="menu">
+            <li><a href="index.html">Front page</a></li>
+            <li><a href="about_us.html">About us</a></li>
+            <li><a href="events.html">Events</a></li>
+            <li><a href="merge.html">Merch</a></li>
+            <li><a href="press.html">Press</a></li>
+            <li><a href="giftcard.html">Giftcard</a></li>
+          </ul>
+        </nav>
+      </header>
 
-    <main>
-      <div class="screen">
-        <img class="logo" src="img/logo_pinkmaane.svg" alt="logo" />
-      </div>
-    </main>
+      <main>
+        <img class="img_logo" src="img/logo_pinkmaane.svg" alt="logo" />
+      </main>
+    </div>
 
     <script src="menu.js"></script>
   </body>
