--- a/press.html
+++ b/press.html
@@ -83,6 +83,21 @@
         </div>
       </main>
     </div>
+    <footer>
+      <div class="social-icons">
+        <a href="https://www.instagram.com/verandavin/" target="_blank"
+          ><i class="fab fa-instagram"></i
+        ></a>
+        <a href="mailto:info@verandavin.dk" class="newsletter-icon"
+          ><i class="far fa-envelope"></i
+        ></a>
+      </div>
+
+      <div class="tekst_footer">
+        All Right Reserved @Veranda Vin Aps - Griffenfeldsgade 17, 2200
+        København.
+      </div>
+    </footer>
     <script src="menu.js"></script>
   </body>
 </html>
