ronja index næsten feridg

--- a/press.html
+++ b/press.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="mutual_styles.css" />
     <link rel="stylesheet" href="press.css" />
     <link rel="stylesheet" href="styles.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+    />
   </head>
 
   <body>
