--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>master</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="index.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+    />
   </head>
 
   <body>
@@ -27,6 +31,17 @@
         <img class="img_logo" src="img/logo_pinkmaane.svg" alt="logo" />
       </main>
     </div>
+
+    <footer>
+      <div class="social-icons">
+        <a href="https://www.instagram.com/verandavin/" target="_blank"
+          ><i class="fab fa-instagram"></i
+        ></a>
+        <a href="mailto:info@verandavin.dk" class="newsletter-icon"
+          ><i class="far fa-envelope"></i
+        ></a>
+      </div>
+    </footer>
 
     <script src="menu.js"></script>
   </body>
