press helt færdig ronja

--- a/press.html
+++ b/press.html
@@ -47,19 +47,21 @@
             "You will not find most of their products anywhere else. Retrieved
             from family businesses and made in limited batches where there is a
             minimum to no additives."
-            <br /><br />
-            - Wonderful Copenhagen
           </p>
+
+          <p>- Wonderful Copenhagen</p>
+
           <div class="center_img">
             <img class="img1" src="img_press/press_img4.jpg" alt="Kombucha" />
           </div>
+
           <p class="p_press">
             “Her kan du om dagen spise enkle serveringer og købe vin med hjem,
             og når mørket falder på, er der uprætentiøse drinks og vine for
             alle.”
-            <br /><br />
-            - Copenhagen Food
           </p>
+
+          <p>- Copenhagen Food</p>
         </div>
 
         <div class="container2_1_1">
@@ -68,9 +70,9 @@
             hyggelig atmosfære, og hver lørdag inviterer de til Oyster Saturday:
             Her kan du nyde østers med citron og vinegrette til bare 25 kr.
             stykket."
-            <br /><br />
-            - Bo Bedre
           </p>
+
+          <p>- Bo Bedre</p>
 
           <div class="center_img">
             <img class="order" src="img_press/press_img3.jpg" alt="Oysters" />
@@ -81,12 +83,13 @@
             forskellige småretter. Så mødes I bare til noget at drikke, kan I
             nemt fortsætte til maden, hvis snakken går som smurt. Den hyggelige
             atmosfære indenfor er perfekt til en romantisk date."
-            <br /><br />
-            - Elle
           </p>
+
+          <p>- Elle</p>
         </div>
       </main>
     </div>
+
     <footer>
       <div class="social-icons">
         <a href="https://www.instagram.com/verandavin/" target="_blank"
