--- a/events.html
+++ b/events.html
@@ -45,12 +45,12 @@
         on.
     </div>
 
-    <div class="scrolling-container">
-        <div class="grid1">
-            <img src="img_events/østers_skilt.webp" alt="First Image" class="animated-image">
-            <img src="img_events/vin_plakat.webp" alt="Second Image" class="animated-image">
-        </div>
+
+    <div class="grid1">
+        <img src="img_events/østers_skilt.webp" alt="First Image">
+        <img src="img_events/vin_plakat.webp" alt="Second Image">
     </div>
+
 
     <p>Join us every Saturday for a special treat - OYSTER SATURDAYS which is our hopefully forever
         ongoing event.
