--- a/index.html
+++ b/index.html
@@ -11,11 +11,12 @@
 </head>
 
 <body>
+
   <div class="screen">
+
     <header>
       <nav class="navbar">
         <ul class="menu">
-          <li><a href="index.html">Front page</a></li>
           <li><a href="about_us.html">About us</a></li>
           <li><a href="events.html">Events</a></li>
           <li><a href="merge.html">Merch</a></li>
@@ -23,7 +24,14 @@
           <li><a href="giftcard.html">Giftcard</a></li>
         </ul>
       </nav>
+
+      <div class="burger">
+        <div class="line"></div>
+        <div class="line"></div>
+        <div class="line"></div>
+      </div>
     </header>
+
 
     <main>
       <img class="img_logo" src="img/logo_pinkmaane.svg" alt="logo" />
