--- a/events.html
+++ b/events.html
@@ -65,6 +65,8 @@
         collaborating with us? Feel free to share your ideas with us at info@verandavin.dk
     </p>
 
+    <div id="instagramFeed" class="instagram-feed"></div>
+
     <footer>
         <div class="social-icons">
             <a href="https://www.instagram.com/verandavin/" target="_blank"><i class="fab fa-instagram"></i></a>
@@ -78,6 +80,7 @@
 
     <script src="menu.js"></script>
     <script src="script.js"></script>
+    <script src="app.js"></script>
 </body>
 
 </html>
