--- a/events.html
+++ b/events.html
@@ -40,31 +40,36 @@
 
     <h1>Events</h1>
 
-    <div class="tekst1">
+    <p>
         At Veranda, we continuously strive to curate events that we ourselves would appreciate spending our own time
         on.
+    </p>
+
+    <div class="overlappende_billeder">
+        <img src="img_events/glade.webp" alt="Billede 1">
+        <img src="img_events/østers.webp" alt="Billede 2">
     </div>
-
-
-    <div class="grid1">
-        <img src="img_events/østers_skilt.webp" alt="First Image">
-        <img src="img_events/vin_plakat.webp" alt="Second Image">
-    </div>
-
 
     <p>Join us every Saturday for a special treat - OYSTER SATURDAYS which is our hopefully forever
         ongoing event.
     </p>
+
+    <div class="billede">
+        <img src="img_events/vinplakat.webp" alt="Billede 2">
+    </div>
 
     <p>
         Our venue plays host to a variety of events featuring chefs, DJs, and sommeliers from around the world.
     </p>
 
     <p>
-        Stay in the loop by following us on Instagram, where we regularly update you on upcoming events.Interested in
-        collaborating with us? Feel free to share your ideas with us at info@verandavin.dk
-    </p>
+        Stay in the loop by following us on Instagram, where we regularly update you on upcoming events. Interested in
+        collaborating with us? Feel free to share your ideas with us at info@verandavin.dk</p>
 
+    <div class="instagram">
+        <img src="img_events/insta_plugin.png" alt="Billede 2">
+
+    </div>
     <div id="instagramFeed" class="instagram-feed"></div>
 
     <footer>
