--- a/events.html
+++ b/events.html
@@ -40,19 +40,19 @@
 
     <h1>Events</h1>
 
-    <p>
+    <div class="tekst1">
         At Veranda, we continuously strive to curate events that we ourselves would appreciate spending our own time
         on.
-    </p>
+    </div>
 
     <div class="overlappende_billeder">
         <img src="img_events/glade.webp" alt="Billede 1">
         <img src="img_events/østers.webp" alt="Billede 2">
     </div>
 
-    <p>Join us every Saturday for a special treat - OYSTER SATURDAYS which is our hopefully forever
+    <div class="tekst2">Join us every Saturday for a special treat - OYSTER SATURDAYS which is our hopefully forever
         ongoing event.
-    </p>
+    </div>
 
     <div class="billede">
         <img src="img_events/vinplakat.webp" alt="Billede 2">
