--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>master</title>
     <link rel="stylesheet" href="style.css" />
@@ -28,7 +28,7 @@
       </header>
 
       <main>
-        <img class="img_logo" src="img/logo_pinkmaane.svg" alt="logo" />
+        <img class="img_logo" src="img/logo_pinkmaane.svg" alt="logo">
       </main>
 
       <footer>
