--- a/press.html
+++ b/press.html
@@ -43,49 +43,61 @@
         <h1>Press</h1>
 
         <div class="container_1_1">
-          <p class="p_press">
-            "You will not find most of their products anywhere else. Retrieved
-            from family businesses and made in limited batches where there is a
-            minimum to no additives."
-          </p>
+          <div class="tekst_cont_1">
+            <div class="sammen1">
+              <p class="p_press">
+                "You will not find most of their products anywhere else.
+                Retrieved from family businesses and made in limited batches
+                where there is a minimum to no additives."
+              </p>
 
-          <p>- Wonderful Copenhagen</p>
+              <p>- Wonderful Copenhagen</p>
+            </div>
+
+            <div class="sammen2">
+              <p class="p_press">
+                “Her kan du om dagen spise enkle serveringer og købe vin med
+                hjem, og når mørket falder på, er der uprætentiøse drinks og
+                vine for alle.”
+              </p>
+
+              <p>- Copenhagen Food</p>
+            </div>
+          </div>
 
           <div class="center_img">
             <img class="img1" src="img_press/press_img4.jpg" alt="Kombucha" />
           </div>
-
-          <p class="p_press">
-            “Her kan du om dagen spise enkle serveringer og købe vin med hjem,
-            og når mørket falder på, er der uprætentiøse drinks og vine for
-            alle.”
-          </p>
-
-          <p>- Copenhagen Food</p>
         </div>
 
         <div class="container2_1_1">
-          <p class="p_press">
-            "Det søde personale bag baren sørger altid for en uformel og
-            hyggelig atmosfære, og hver lørdag inviterer de til Oyster Saturday:
-            Her kan du nyde østers med citron og vinegrette til bare 25 kr.
-            stykket."
-          </p>
+          <div class="tekst_cont_2">
+            <div class="sammen3">
+              <p class="p_press">
+                "Det søde personale bag baren sørger altid for en uformel og
+                hyggelig atmosfære, og hver lørdag inviterer de til Oyster
+                Saturday: Her kan du nyde østers med citron og vinegrette til
+                bare 25 kr. stykket."
+              </p>
 
-          <p>- Bo Bedre</p>
+              <p>- Bo Bedre</p>
+            </div>
+
+            <div class="sammen4">
+              <p class="p_press">
+                "Den lille, lokale bar og café på Nørrebro byder både på vin, øl
+                og forskellige småretter. Så mødes I bare til noget at drikke,
+                kan I nemt fortsætte til maden, hvis snakken går som smurt. Den
+                hyggelige atmosfære indenfor er perfekt til en romantisk date."
+              </p>
+
+              <p>- Elle</p>
+            </div>
+          </div>
 
           <div class="center_img">
             <img class="order" src="img_press/press_img3.jpg" alt="Oysters" />
           </div>
-
-          <p class="p_press">
-            "Den lille, lokale bar og café på Nørrebro byder både på vin, øl og
-            forskellige småretter. Så mødes I bare til noget at drikke, kan I
-            nemt fortsætte til maden, hvis snakken går som smurt. Den hyggelige
-            atmosfære indenfor er perfekt til en romantisk date."
-          </p>
-
-          <p>- Elle</p>
         </div>
       </main>
     </div>
