--- a/events.html
+++ b/events.html
@@ -47,7 +47,7 @@
 
     <div class="overlappende_billeder">
         <img src="img_events/glade.webp" alt="Billede 1">
-        <img src="img_events/østers.webp" alt="Billede 2">
+        <img src="img_events/østers.webp" alt="Billede 2" id="popImage">
     </div>
 
     <div class="tekst2">Join us every Saturday for a special treat - OYSTER SATURDAYS which is our hopefully forever
@@ -55,7 +55,7 @@
     </div>
 
     <div class="billede">
-        <img src="img_events/vinplakat.webp" alt="Billede 2">
+        <img src="img_events/vinplakat.webp" alt="Billede 2" id="popImage2">
     </div>
 
     <p>
