--- a/about_us.html
+++ b/about_us.html
@@ -7,53 +7,104 @@
     <title>Aboutus</title>
     <link rel="stylesheet" href="about_us.css">
     <link rel="stylesheet" href="mutual_styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 </head>
 
 <body>
 
-    <div class="logo">
-        <a href="index.html">
-            <img src="img_press/logo_blue-2.webp" alt="logo">
-        </a>
-    </div>
-
-    <div class="navbar">
-        <div class="burger-menu">
-            <div class="bar"></div>
-            <div class="bar"></div>
-            <div class="bar"></div>
+    <nav>
+        <div class="logo">
+            <a href="index.html">
+                <img src="img/logo_blue.webp" alt="Logo" />
+            </a>
         </div>
-        <ul class="menu-list">
-            <li><a href="index.html">Front page</a></li>
+
+        <ul class="menu">
             <li><a href="about_us.html">About us</a></li>
             <li><a href="events.html">Events</a></li>
-            <li><a href="merge.html">Merge</a></li>
+            <li><a href="giftcard.html">Giftcard</a></li>
+            <li><a href="merge.html">Merch</a></li>
             <li><a href="press.html">Press</a></li>
-
         </ul>
-    </div>
+
+        <div class="burger">
+            <div class="line"></div>
+            <div class="line"></div>
+            <div class="line"></div>
+        </div>
+    </nav>
+
 
     <h1>About us</h1>
-    <p>
-        Veranda is situated in Griffenfeldsgade 17 Nørrebro, Copenhagen.
-        We're a petite bar offering an extensive array of natural/low-intervention wines, diverse beers, and quality
-        spirits.
-        We also feature a thoughtfully curated snack menu, including items such as olives, cheeses, charcuterie, tinned
-        seafood,
-        and freshly baked bread, among others.
-
-        We collaborate with producers who are dedicated to their craft, preferably engaging in regenerative or organic
-        practices. Ultimately, what holds the utmost importance for us is the people and the passion behind the products
-        we
-        offer.
-
-        Hope to see you around.
-    </p>
-    <img src="img_about_us/foran.webp" alt="foran">
-    <img src="img_about_us/mad.webp" alt="mad">
-    <img src="img_about_us/vin.webp" alt="vin">
 
 
+
+    <div class="billede1_container">
+        <div class="image1">
+            <img src="img_about_us/foran.png" alt="Billede1">
+        </div>
+        <div class="text2">
+            <p>
+                Veranda is situated in Griffenfeldsgade 17 Nørrebro, Copenhagen.
+                We're a petite bar offering an extensive array of natural/low-intervention wines, diverse beers, and
+                quality spirits.
+                We also feature a thoughtfully curated snack menu, including items such as olives, cheeses, charcuterie,
+                tinned seafood,
+                and freshly baked bread, among others.
+            </p>
+        </div>
+    </div>
+
+    <div class="billede2_container">
+        <div class="image2">
+            <img src="img_about_us/mad.png" alt="mad">
+        </div>
+        <div class="image2">
+            <img src="img_about_us/vin.png" alt="vino">
+        </div>
+    </div>
+
+    <div class="text3">
+        <p>
+            We collaborate with producers who are dedicated to their craft, preferably engaging in regenerative or
+            organic
+            practices. Ultimately, what holds the utmost importance for us is the people and the passion behind the
+            products
+            we offer.
+        </p>
+    </div>
+
+    <div class="team-images">
+        <img src="img_about_us/holdet.png" alt="team">
+        <img src="img_about_us/skinke.png" alt="ham">
+        <img src="img_about_us/sovevin.png" alt="sleeping wine">
+    </div>
+
+
+    <p>Hope to see you around.</p>
+
+    <div class="texts">
+        <p>
+            <strong>OPENING HOURS:</strong><br>
+            MONDAY - SATURDAY<br>
+            14:00 - 00:00<br><br>
+            <strong>FIRST COME FIRST SERVED</strong><br><br>
+            <strong>NO RESERVATIONS</strong><br>
+            <a href="mailto:info@verandavin.dk">info@verandavin.dk</a>
+        </p>
+    </div>
+
+
+    <footer>
+        <div class="social-icons">
+            <a href="https://www.instagram.com/verandavin/" target="_blank"><i class="fab fa-instagram"></i></a>
+            <a href="mailto:info@verandavin.dk" class="newsletter-icon"><i class="far fa-envelope"></i></a>
+        </div>
+
+        <div class="tekst_footer">
+            All Right Reserved @Veranda Vin Aps - Griffenfeldsgade 17, 2200 København.
+        </div>
+    </footer>
 </body>
 
 </html>
