--- a/about_us.html
+++ b/about_us.html
@@ -43,7 +43,7 @@
         <div class="image1">
             <img src="img_about_us/foran.png" alt="Billede1">
         </div>
-        <div class="text2">
+        <div class="text1">
             <p>
                 Veranda is situated in Griffenfeldsgade 17 Nørrebro, Copenhagen.
                 We're a petite bar offering an extensive array of natural/low-intervention wines, diverse beers, and
@@ -64,7 +64,7 @@
         </div>
     </div>
 
-    <div class="text3">
+    <div class="text2">
         <p>
             We collaborate with producers who are dedicated to their craft, preferably engaging in regenerative or
             organic
@@ -80,10 +80,11 @@
         <img src="img_about_us/sovevin.png" alt="sleeping wine">
     </div>
 
+    <div class="text3">
+        <p>Hope to see you around.</p>
+    </div>
 
-    <p>Hope to see you around.</p>
-
-    <div class="texts">
+    <div class="text4">
         <p>
             <strong>OPENING HOURS:</strong><br>
             MONDAY - SATURDAY<br>
