--- a/events.html
+++ b/events.html
@@ -58,9 +58,9 @@
         <img src="img_events/vinplakat.webp" alt="Billede 2" id="popImage2">
     </div>
 
-    <p>
+    <div class="tekst3">
         Our venue plays host to a variety of events featuring chefs, DJs, and sommeliers from around the world.
-    </p>
+    </div>
 
     <p>
         Stay in the loop by following us on Instagram, where we regularly update you on upcoming events. Interested in
