--- a/events.html
+++ b/events.html
@@ -79,10 +79,10 @@
         </div>
 
         <div class="tekst_footer">
-            All Right Reserved @Veranda Vin Aps - Griffenfeldsgade 17, 2200 København.
+            All Right Reserved @Veranda Vin Aps - Griffenfeldsgade 17, 2200
+            København.
         </div>
     </footer>
-
     <script src="menu.js"></script>
     <script src="script.js"></script>
     <script src="app.js"></script>
