press helt done ronja + blå links

--- a/press.html
+++ b/press.html
@@ -47,17 +47,16 @@
                 Retrieved from family businesses and made in limited batches
                 where there is a minimum to no additives."
               </p>
-
-              <p>- Wonderful Copenhagen</p>
+              <a href="https://www.wonderfulcopenhagen.com/wonderful-copenhagen/international-press/international-press/natural-wine-bars-neighbourhood"><p>- Wonderful Copenhagen</p></a>
             </div>
+
             <div class="sammen2">
               <p class="p_press">
                 “Her kan du om dagen spise enkle serveringer og købe vin med
                 hjem, og når mørket falder på, er der uprætentiøse drinks og
                 vine for alle.”
               </p>
-
-              <p>- Copenhagen Food</p>
+              <a href="https://copenhagenfood.dk/veranda/"><p>- Copenhagen Food</p></a>
             </div>
           </div>
           
@@ -83,9 +82,9 @@
                 Saturday: Her kan du nyde østers med citron og vinegrette til
                 bare 25 kr. stykket."
               </p>
+              <a href="https://bobedre.dk/kultur/restaurantguide-17-steder-i-landet-hvor-du-kan-nyde-oesters"><p>- Bo Bedre</p></a>
 
-              <p>- Bo Bedre</p>
-            </div>
+              </div>
 
 
             <div class="sammen4">
@@ -95,8 +94,8 @@
                 kan I nemt fortsætte til maden, hvis snakken går som smurt. Den
                 hyggelige atmosfære indenfor er perfekt til en romantisk date."
               </p>
-
-              <p>- Elle</p>
+            <a href="https://www.elle.dk/kultur/10-gode-steder-gaa-paa-date-i-koebenhavn"><p>- Elle</p></a>
+              
             </div>
           </div>
 
