--- a/press.html
+++ b/press.html
@@ -47,7 +47,7 @@
                 Retrieved from family businesses and made in limited batches
                 where there is a minimum to no additives."
               </p>
-              <a href="https://www.wonderfulcopenhagen.com/wonderful-copenhagen/international-press/international-press/natural-wine-bars-neighbourhood"><p>- Wonderful Copenhagen</p></a>
+              <a class="link" href="https://www.wonderfulcopenhagen.com/wonderful-copenhagen/international-press/international-press/natural-wine-bars-neighbourhood"><p>- Wonderful Copenhagen</p></a>
             </div>
 
             <div class="sammen2">
@@ -56,7 +56,7 @@
                 hjem, og når mørket falder på, er der uprætentiøse drinks og
                 vine for alle.”
               </p>
-              <a href="https://copenhagenfood.dk/veranda/"><p>- Copenhagen Food</p></a>
+              <a class="link" href="https://copenhagenfood.dk/veranda/"><p>- Copenhagen Food</p></a>
             </div>
           </div>
           
@@ -82,7 +82,7 @@
                 Saturday: Her kan du nyde østers med citron og vinegrette til
                 bare 25 kr. stykket."
               </p>
-              <a href="https://bobedre.dk/kultur/restaurantguide-17-steder-i-landet-hvor-du-kan-nyde-oesters"><p>- Bo Bedre</p></a>
+              <a class="link" href="https://bobedre.dk/kultur/restaurantguide-17-steder-i-landet-hvor-du-kan-nyde-oesters"><p>- Bo Bedre</p></a>
 
               </div>
 
@@ -94,7 +94,7 @@
                 kan I nemt fortsætte til maden, hvis snakken går som smurt. Den
                 hyggelige atmosfære indenfor er perfekt til en romantisk date."
               </p>
-            <a href="https://www.elle.dk/kultur/10-gode-steder-gaa-paa-date-i-koebenhavn"><p>- Elle</p></a>
+            <a class="link" href="https://www.elle.dk/kultur/10-gode-steder-gaa-paa-date-i-koebenhavn"><p>- Elle</p></a>
               
             </div>
           </div>
@@ -123,6 +123,6 @@
         </div>
     </footer>
     <script src="menu.js"></script>
-    <script src="script.js"></script>
+    <script src="pressimg.js"></script>
   </body>
 </html>
