--- a/events.html
+++ b/events.html
@@ -87,7 +87,7 @@
         </div>
     </footer>
     <script src="menu.js"></script>
-    <script src="script.js"></script>
+    <script src="events.js"></script>
     <script src="app.js"></script>
 </body>
 
