--- a/about_us.html
+++ b/about_us.html
@@ -38,50 +38,40 @@
     <h1>About us</h1>
 
 
-
-    <div class="billede1_container">
-        <div class="image1">
-            <img src="img_about_us/foran.png" alt="Billede1">
-        </div>
-        <div class="text1">
-            <p>
-                Veranda is situated in Griffenfeldsgade 17 Nørrebro, Copenhagen.
-                We're a petite bar offering an extensive array of natural/low-intervention wines, diverse beers, and
-                quality spirits.
-                We also feature a thoughtfully curated snack menu, including items such as olives, cheeses, charcuterie,
-                tinned seafood,
-                and freshly baked bread, among others.
-            </p>
-        </div>
+    <div class="overlappende_billeder">
+        <img src="img_about_us/foran.png" alt="Billede 1">
+        <img src="img_about_us/bagbaren.jpg" alt="Billede 2" id="popImage">
     </div>
 
-    <div class="billede2_container">
-        <div class="image2">
-            <img src="img_about_us/mad.png" alt="mad">
-        </div>
-        <div class="image2">
-            <img src="img_about_us/vin.png" alt="vino">
-        </div>
-    </div>
-
-    <div class="text2">
-        <p>
-            We collaborate with producers who are dedicated to their craft, preferably engaging in regenerative or
-            organic
-            practices. Ultimately, what holds the utmost importance for us is the people and the passion behind the
-            products
-            we offer.
+    <div class="tekst1">
+        <p>Veranda is situated in Griffenfeldsgade 17 Nørrebro, Copenhagen.
+            We're a petite bar offering an extensive array of natural/low-intervention wines, diverse beers, and
+            quality spirits.
+            We also feature a thoughtfully curated snack menu, including items such as olives, cheeses,
+            charcuterie,
+            tinned seafood,
+            and freshly baked bread, among others.
         </p>
     </div>
 
-    <div class="team-images">
-        <img src="img_about_us/holdet.png" alt="team">
-        <img src="img_about_us/skinke.png" alt="ham">
-        <img src="img_about_us/sovevin.png" alt="sleeping wine">
+    <div class="billeder2">
+        <img class="billede2" src="img_about_us/sovevin.png" alt="Billede 3">
+        <img class="billede2" src="img_about_us/vincloseup.png" alt="Billede 2">
+        <img class="billede2" src="img_about_us/skinke.png" alt="Billede 2">
     </div>
 
-    <div class="text3">
-        <p>Hope to see you around.</p>
+
+    <div class="tekst2">We collaborate with producers who are dedicated to their craft, preferably engaging in
+        regenerative or organic
+        practices. Ultimately, what holds the utmost importance for us is the people and the passion behind the
+        products
+        we offer.
+    </div>
+
+    <div class="text5">
+        <p>
+            Hope to see you around.
+        </p>
     </div>
 
     <div class="text4">
@@ -106,6 +96,8 @@
             All Right Reserved @Veranda Vin Aps - Griffenfeldsgade 17, 2200 København.
         </div>
     </footer>
+    <script src="menu.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
