--- a/events.html
+++ b/events.html
@@ -54,17 +54,23 @@
         ongoing event.
     </div>
 
-    <div class="billede">
-        <img src="img_events/vinplakat.webp" alt="Billede 2" id="popImage2">
-    </div>
-
     <div class="tekst3">
         Our venue plays host to a variety of events featuring chefs, DJs, and sommeliers from around the world.
     </div>
 
-    <p>
+    <div class="billede_grid">
+        <div>
+            <img src="img_events/vinplakat.webp" alt="Billede 2" id="popImage2">
+        </div>
+        <div>
+            <img src="img_events/fest.webp" alt="Billede 2">
+        </div>
+    </div>
+
+
+    <div class="tekst4">
         Stay in the loop by following us on Instagram, where we regularly update you on upcoming events. Interested in
-        collaborating with us? Feel free to share your ideas with us at info@verandavin.dk</p>
+        collaborating with us? Feel free to share your ideas with us at info@verandavin.dk</div>
 
     <div class="instagram">
         <img src="img_events/insta_plugin.png" alt="Billede 2">
