--- a/about_us.html
+++ b/about_us.html
@@ -101,7 +101,7 @@
         </div>
     </footer>
     <script src="menu.js"></script>
-    <script src="events.js"></script>
+    <script src="script.js"></script>
     <script src="aboutus.js"></script>
 
 </body>
