--- a/about_us.html
+++ b/about_us.html
@@ -99,6 +99,9 @@
         <div class="tekst_footer">
             All Right Reserved @Veranda Vin Aps - Griffenfeldsgade 17, 2200 København.
         </div>
+        <div class="tekst_footer2">
+            <a href="https://www.findsmiley.dk/757360">Smiley</a>
+        </div>
     </footer>
     <script src="menu.js"></script>
     <script src="script.js"></script>
