--- a/merge.html
+++ b/merge.html
@@ -170,10 +170,11 @@
             <a href="https://www.instagram.com/verandavin/" target="_blank"><i class="fab fa-instagram"></i></a>
             <a href="mailto:info@verandavin.dk" class="newsletter-icon"><i class="far fa-envelope"></i></a>
         </div>
-
-
         <div class="tekst_footer">
             All Right Reserved @Veranda Vin Aps - Griffenfeldsgade 17, 2200 København.
+        </div>
+        <div class="tekst_footer2">
+            <a href="https://www.findsmiley.dk/757360">Smiley</a>
         </div>
     </footer>
 
