--- a/events.html
+++ b/events.html
@@ -58,12 +58,14 @@
         Our venue plays host to a variety of events featuring chefs, DJs, and sommeliers from around the world.
     </div>
 
-    <div class="billede_grid">
-        <div>
-            <img src="img_events/vinplakat.webp" alt="Billede 2" id="popImage2">
-        </div>
-        <div>
-            <img src="img_events/fest.webp" alt="Billede 2">
+    <div class="billede_container">
+        <div class="billede_grid">
+            <div>
+                <img src="img_events/vinplakat.webp" alt="Billede 1" id="popImage2">
+            </div>
+            <div>
+                <img src="img_events/fest.webp" alt="Billede 2">
+            </div>
         </div>
     </div>
 
