--- a/index.html
+++ b/index.html
@@ -33,8 +33,16 @@
     </header>
 
 
-    <main>
+    <!-- <main>
       <img class="img_logo" src="img/logo_pinkmaane.svg" alt="logo" />
+    </main> -->
+
+    <main>
+
+      <img class="img_maane scale-up-center " id="maaneImg" src="img/maane.png" alt="maane">
+      <img class="img_logo " src="img/logo_blue.png" alt="logo">
+    </main>
+
     </main>
 
     <footer>
@@ -48,6 +56,8 @@
 
 
   <script src="menu.js"></script>
+  <script src="maane.js"></script>
+
 </body>
 
 </html>
