--- a/index.html
+++ b/index.html
@@ -32,15 +32,10 @@
       </div>
     </header>
 
-
-    <!-- <main>
-      <img class="img_logo" src="img/logo_pinkmaane.svg" alt="logo" />
-    </main> -->
-
     <main>
 
       <img class="img_maane scale-up-center " id="maaneImg" src="img/maane.png" alt="maane">
-      <img class="img_logo " src="img/logo_blue.png" alt="logo">
+      <img class="img_logo " src="img/logo_blue.svg" alt="logo">
     </main>
 
     </main>
