--- a/index.html
+++ b/index.html
@@ -38,7 +38,6 @@
       <img class="img_logo " src="img/logo_blue.svg" alt="logo">
     </main>
 
-    </main>
 
     <footer>
       <div class="social-icons">
@@ -52,6 +51,7 @@
 
   <script src="menu.js"></script>
   <script src="maane.js"></script>
+  <script src="login.js"></script>
 
 </body>
 
