--- a/merge.html
+++ b/merge.html
@@ -6,121 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="mutual_styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-
+    <link rel="stylesheet" href="merge.css">
     <title>Merch</title>
-    <style>
-        @font-face {
-            font-family: 'VerandaFont';
-            src: url('Apoc-BoldItalic.woff') format('woff');
-            src: url('Apoc-BoldItalic.woff2') format('woff2');
-            font-weight: normal;
-            font-style: normal;
-        }
 
-        body {
-            margin: 1cm;
-            border: 2px solid #283274;
-            box-sizing: border-box;
-            background-color: #f9f2f2;
-        }
-
-        header img {
-            width: 200px;
-            height: auto;
-        }
-
-        section {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-            padding: 20px;
-        }
-
-        .merch-item1 {
-            flex: 0 0 calc(33.33% - 20px);
-            /* 3 items per row with some margin */
-            margin: 10px;
-            cursor: auto;
-
-            transition: transform 2s ease;
-        }
-
-        /* Define the default image style */
-        .merch-item1 img {
-            width: 100%;
-            height: 100%;
-            transition: transform 2s ease;
-        }
-
-        .merch-item2 {
-            flex: 0 0 calc(33.33% - 20px);
-            /* 3 items per row with some margin */
-            margin: 10px;
-            transition: transform 2s ease;
-        }
-
-        /* Define the default image style */
-        .merch-item2 img {
-            width: 100%;
-            height: 100%;
-            transition: transform 2s ease;
-        }
-
-        .merch-item3 {
-            flex: 0 0 calc(33.33% - 20px);
-            /* 3 items per row with some margin */
-            margin: 10px;
-            transition: transform 2s ease;
-        }
-
-        /* Define the default image style */
-        .merch-item3 img {
-            width: 100%;
-            height: 100%;
-            transition: transform 2s ease;
-        }
-
-
-        /* Define the hover effect with different images for each merch item */
-        .merch-item1:hover img {
-            transform: scale(1.2);
-            /* You can adjust the scale factor */
-            content: url(merchphotos/tshirt2.webp);
-        }
-
-        .merch-item3:hover img {
-            transform: scale(1.2);
-            /* You can adjust the scale factor */
-            content: url(/merchphotos/lighter2.webp);
-            /* Set the hover image for Merchandise 1 */
-        }
-
-        .merch-item2:hover img {
-            transform: scale(1.2);
-            /* You can adjust the scale factor */
-
-            content: url(merchphotos/totebag2.webp);
-            /* Set the hover image for Merchandise 1 */
-        }
-
-
-
-        @media (max-width: 768px) {
-            section {
-                flex-direction: column;
-                /* Change flex-direction to column for mobile devices */
-            }
-
-            .merch-item {
-                flex: 0 0 100%;
-                /* Set to 100% width on mobile devices */
-            }
-
-            header p {
-                margin: 10px;
-            }
-        }
-    </style>
 </head>
 
 <body>
