--- a/merge.html
+++ b/merge.html
@@ -82,7 +82,7 @@
 
         .merch-item3:hover img {
             transform: scale(1.2);
-            content: url(/merchphotos/lighter2.webp);
+            content: url(merchphotos/lighter2.webp);
         }
 
         .merch-item2:hover img {
@@ -146,14 +146,14 @@
 
     <section>
         <div class="merch-item1">
-            <img src="/merchphotos/tshirt1.webp" alt="Merchandise 1">
+            <img src="merchphotos/tshirt1.webp" alt="Merchandise 1">
         </div>
 
         <div class="merch-item3">
-            <img src="/merchphotos/lighter1.webp" alt="Merchandise 3">
+            <img src="merchphotos/lighter1.webp" alt="Merchandise 3">
         </div>
         <div class="merch-item2">
-            <img src="/merchphotos/totebag1.webp" alt="Merchandise 2">
+            <img src="merchphotos/totebag1.webp" alt="Merchandise 2">
         </div>
     </section>
     <footer>
