--- a/events.html
+++ b/events.html
@@ -14,27 +14,20 @@
 <body>
 
     <header>
-        <nav>
-            <div class="logo">
-                <a href="index.html">
-                    <img src="img/logo_blue.webp" alt="Logo" />
-                </a>
-            </div>
-
+        <nav class="navbar">
             <ul class="menu">
                 <li><a href="about_us.html">About us</a></li>
                 <li><a href="events.html">Events</a></li>
-                <li><a href="giftcard.html">Giftcard</a></li>
                 <li><a href="merge.html">Merch</a></li>
-
+                <li><a href="giftcard.html">Giftcard</a></li>
             </ul>
-
-            <div class="burger">
-                <div class="line"></div>
-                <div class="line"></div>
-                <div class="line"></div>
-            </div>
         </nav>
+
+        <div class="burger">
+            <div class="line"></div>
+            <div class="line"></div>
+            <div class="line"></div>
+        </div>
     </header>
 
 
