events logo er tilbage

--- a/events.html
+++ b/events.html
@@ -13,22 +13,26 @@
 
 <body>
 
-    <header>
-        <nav class="navbar">
-            <ul class="menu">
-                <li><a href="about_us.html">About us</a></li>
-                <li><a href="events.html">Events</a></li>
-                <li><a href="merge.html">Merch</a></li>
-                <li><a href="giftcard.html">Giftcard</a></li>
-            </ul>
-        </nav>
+    <nav>
+        <div class="logo">
+            <a href="index.html">
+                <img src="img/logo_blue.webp" alt="Logo" />
+            </a>
+        </div>
+
+        <ul class="menu">
+            <li><a href="about_us.html">About us</a></li>
+            <li><a href="events.html">Events</a></li>
+            <li><a href="giftcard.html">Giftcard</a></li>
+            <li><a href="merge.html">Merch</a></li>
+        </ul>
 
         <div class="burger">
             <div class="line"></div>
             <div class="line"></div>
             <div class="line"></div>
         </div>
-    </header>
+    </nav>
 
 
     <h1>Events</h1>
